# ienn

./: .gitignore  README.md  config.yaml  demonstration.ipynb  pyproject.toml  requirements.txt
model/: .gitignore
output/: .gitignore
output/CIFAR10/class_3/: LeNet_causal_graph.pkl
output/MNIST/class_1/: LeNet_causal_graph.pkl
output/MNIST/class_3/: LeNet_causal_graph.pkl  stability.pkl
output/evaluation_metrics/LeNet/: IORF_metric.csv  LipschitzEstimate_metric.csv
src/explainnn/: dataset.py  definitions.py  evaluation_metrics.py  explain.py  explain_utils.py  main.py
